# libtc-color-adjustment

./: Android.mk  Makefile.am  configure.ac  tc-color-adjustment.pc.in
include/: Makefile.am  tc_api_color_adjustment.h  tc_color_3d_tables.h  tc_color_hsv.h  tc_color_log.h  tc_color_temperature.h  tc_color_util.h  tcc_lut_3d_ioctl.h  tcc_lut_ioctl.h
src/: Makefile.am  tc_api_color_adjustment.c  tc_color_3d_tables.c  tc_color_hsv.c  tc_color_log.c  tc_color_temperature.c  tc_color_util.c
test/: Makefile.am  ut_coloradjustment_cli.c
